--- a/src/views/editor/editors.css
+++ b/src/views/editor/editors.css
@@ -3,15 +3,16 @@
 @import url('./editors-hint.css');
 
 .discovery-editor {
+    --editor-border-color: rgba(124, 124, 124, 0.65);
     display: flex;
     flex-direction: column;
     margin-bottom: 5px;
-    border: 1px solid rgba(124, 124, 124, 0.65);
+    border: 1px solid var(--editor-border-color);
     border-radius: 3px;
     background-color: var(--discovery-background-color);
 }
 .discovery-editor:focus-within {
-    border-color: rgba(0, 141, 255, 0.75);
+    --editor-border-color: rgba(0, 141, 255, 0.75);
     box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2) !important;
 }
 .discovery-editor .discovery-editor__input-panel {
